gorest-restassured-project-serenity

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,4 +1,4 @@
-serenity.project.name = Gorest
+serenity.project.name = GoRest
 
 ## This will add exception in compromised into report
 serenity.compromised.on = java.io.FileNotFoundException
