--- a/serenity.properties
+++ b/serenity.properties
@@ -1,4 +1,4 @@
-serenity.project.name = GoRest
+serenity.project.name = GoRest Project
 
 ## This will add exception in compromised into report
 serenity.compromised.on = java.io.FileNotFoundException
